--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -160,20 +160,28 @@
 		justify-content: center;
 		align-items: center;
 		h1 {
-			color: #d0e3f9c4 !important;
-			font-size: 34px;
+			font-size: 32px;
 			font-weight: bold;
 			align-items: center;
-			margin-bottom: 1rem;
-			z-index: 0;
+			margin-bottom: 0;
 		}
 		h2 {
-			color: #d0e3f9c4 !important;
 			font-size: 30px;
 			font-weight: bold;
-			
 			align-items: center;
 			margin-bottom: 1rem;
+		}
+		#dark h1 {
+			color: #d0e3f9c4 !important;
+		}
+		#light h1 {
+			color: #0049f4 !important;
+		}
+		#dark h2 {
+			color: #d0e3f9c4 !important;
+		}
+		#light h2 {
+			color: #0049f4 !important;
 		}
 	}
 	
