--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -11,6 +11,15 @@
 	}
 }
 
+
+.techstack {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+}
+
+
 .threeexp {
   height: 100vh;
   margin-top: 0px;
