--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,6 +35,7 @@
 
 			.tech-stack {
 				span,
+				img,
 				svg,
 				i {
 					display: inline-block;
@@ -43,7 +44,7 @@
 
 				svg,
 				i {
-					width: 36px;
+					width: 30px;
 					height: 36px;
 					padding: 4px;
 
@@ -52,7 +53,7 @@
 				}
 				svg *,
 				i * {
-					width: 36px;
+					width: 30px;
 					height: 36px;
 				}
 			}
